# sip_code

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cuda  FINAL_SIP_GRAPH_PRD.md  PRD_SIP_Backend_v2.0_Refinado.md  README.md  comparison.md  features.md  prd.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Data/: master_data_documentation.ipynb
Data/Vigia/: SECOP_II_EDA.txt  SECOP_II_IRIC_exploration.html  SECOP_II_preprocessing.ipynb  SECOP_II_preprocessing.txt  requirements.txt
artifacts/evaluation/: summary.csv  summary.json
artifacts/features/: encoding_mappings.json
artifacts/iric/: iric_thresholds.json
artifacts/rcac/: rcac_bad_rows.csv
data/: flat_text_to_csv.py
data/PredictingMisconduct/: README.txt
data/Vigia/: README.md  SECOP_II_IRIC_exploration.ipynb  SECOP_II_IRIC_exploration.txt  SECOP_II_models.txt  SECOP_II_preprocessing.html  vigia_env.yml
prds/: PRD_SIP_Backend.md  PRD_SIP_Graph_Module_v1_0.md
src/sip_engine/: __init__.py  __main__.py  (+2 more)
tests/: conftest.py  test_bid_stats.py  test_evaluation.py  test_explainability.py  test_features.py  test_hardware.py  test_iric.py  test_labels.py  test_loaders.py  test_models.py  test_rcac.py  test_system.py  test_ui.py
(+279 files in other folders)
