[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sip-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "scipy>=1.13",
    "joblib>=1.4",
    "Unidecode>=1.3",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-cov>=5.0",
]

[project.scripts]
sip-engine = "sip_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "system: full end-to-end system tests (may require real data artifacts)",
]
